
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct in_addr {int s_addr; } ;


 int AF_INET ;
 int BUFFERSIZE ;
 int INADDR_ANY ;
 int SOCK_STREAM ;
 int accept (int,struct sockaddr*,int*) ;
 unsigned short atoi (char*) ;
 int bind (int,struct sockaddr*,int) ;
 char* calloc (int,int) ;
 int close (int) ;
 int exit (int) ;
 int htonl (int ) ;
 int htons (unsigned short) ;
 int inet_ntoa (struct in_addr) ;
 int listen (int,int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int recv (int,char*,int,int ) ;
 int socket (int ,int ,int) ;
 int strcat (char*,char*) ;
 int strlen (char*) ;
 int strncpy (char*,int ,int) ;
 int write (int,char*,int ) ;

int main(int argc,char *argv[])
{
  int new,dummy,n,s;
  unsigned short port;
  struct sockaddr_in remote,local;
  struct in_addr remote_ip;
  char *remote_host,*recvbuffer,*sendbuffer;

  char header[]="HTTP/1.0 200 OK\r\nConnection: close\r\nContent-Type: application/binary\r\nContent-Length: 0\r\n\r\n";
  char eicar[]="X5O!P%@AP[4\\PZX54(P^)7CC)7}$EICAR-STANDARD-ANTIVIRUS-TEST-FILE!$H+H*";


  if(argv[1]==((void*)0))
    {
      printf("Usage: %s port\n",argv[0]);
      exit(1);
    }
  else
    port=atoi(argv[1]);

  printf("Fake web server starting......\n");


  s=socket(AF_INET,SOCK_STREAM,6);
  if(s<0)
    {
      perror("socket");
      exit(-1);
    }


  local.sin_family=AF_INET;
  local.sin_port=htons(port);
  local.sin_addr.s_addr=htonl(INADDR_ANY);
  n=bind(s,(struct sockaddr *)&local,sizeof(struct sockaddr));
  if(n<0)
    {
      perror("bind");
      exit(-1);
    }


  n=listen(s,5);
  if(n<0)
    {
      perror("listen");
      exit(-1);
    }
  printf("Listening on port %i/tcp\n",port);


  new=accept(s,(struct sockaddr *)&remote,&dummy);
  if(new<0)
    {
      perror("accept");
      exit(-1);
    }


  remote_host=(char *)calloc(24,1);
  remote_ip.s_addr=remote.sin_addr.s_addr;
  strncpy(remote_host,inet_ntoa(remote_ip),24);
  printf("connection from: %s\n",remote_host);


  recvbuffer=calloc(BUFFERSIZE,1);
  n=recv(new,recvbuffer,BUFFERSIZE,0);
  recvbuffer[n]=0;
  printf("\nData from Browser:\n");
  printf("%s\n",recvbuffer);


  sendbuffer=calloc(BUFFERSIZE,1);
  strcat(sendbuffer,header);
  strcat(sendbuffer,eicar);
  printf("sending: \n%s\n",sendbuffer);
  n=write(new,sendbuffer,strlen(sendbuffer));


  printf("Terminating.\n");
  close(new);
  close(s);
  return(0);
}
